--- a/src/main/resources/templates/includeForm.html
+++ b/src/main/resources/templates/includeForm.html
@@ -70,7 +70,7 @@
 				class="form-label" for="date" th:text="#{date}"></label>
 		</div>
 		<div th:fragment="dateAcquisitionField" class="form-floating mb-3">
-			<input placeholder="2021-03-26" class="form-control" type="text"
+			<input placeholder="" class="form-control datepicker" type="text"
 				th:field="*{dateAcquisition}" th:errorclass="fieldError" /> <label
 				class="form-label" th:text="#{dateAcquisition}"
 				for="dateAcquisition"></label>
