--- a/src/main/resources/templates/tests.html
+++ b/src/main/resources/templates/tests.html
@@ -1,16 +1,17 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script>
-	$(document).ready(function() {
-		$(".accordion").accordion({
-			active : false,
-			collapsible : true
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script>
+		$(document).ready(function () {
+			$(".accordion").accordion({
+				active: false,
+				collapsible: true
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="include :: navbar"></nav>
 	<br />
@@ -22,156 +23,203 @@
 				<h1 class="item" th:text="#{testsEven}"></h1>
 			</div>
 			<div class="col">
-				<a th:href="@{#{urldoc}+'4457_1171085051'}"
-				  class="bi-book" th:title="#{Doc}" target="_blank" aria-hidden="true"></a>
+				<a th:href="@{#{urldoc}+'4457_1171085051'}" class="bi-book" th:title="#{Doc}" target="_blank"
+					aria-hidden="true"></a>
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid table-responsive accordion" id="tests">
-		<h1 class="item" th:if="${#lists.isEmpty(eveRucherRuche)}"
-			th:text="#{HistRuchersEveOK}"></h1>
-		<h1 class="item" th:unless="${#lists.isEmpty(eveRucherRuche)}"
-			style="background-color: red;" th:text="#{HistRuchersEveKO}"></h1>
-		<div class="container-fluid table-responsive">
-			<table class="table table-sm table-bordered table-striped" th:unless="${#lists.isEmpty(eveRucherRuche)}">
-				<thead>
-					<tr>
-						<th th:text="#{historique}"></th>
-						<th th:text="#{Erreur}"></th>
-						<th th:text="#{date}"></th>
-						<th th:text="#{type}"></th>
-						<th th:text="#{ruche}"></th>
-						<th	th:text="#{rucher}"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="eve : ${eveRucherRuche}">
-						<td th:text="${ruchersErr[eveStat.index]}"></td>
-						<td th:text="${errsRucher[eveStat.index]}"></td>
-						<td><a
-							th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}"
-							th:with="url='/evenement/'+${eve.id}+
-								(${type}?('?type='+${type}+'&itemId='+${itemId}):'')"
-							th:href="@{${url}}"></a></td>
-						<td th:text="#{${eve.type}}"></td>
-						<td th:text="${eve.ruche?.nom}"></td>
-						<td th:text="${eve.rucher?.nom}"></td>
-					</tr>
-				</tbody>
-			</table>
+	<div class="accordion" id="accordion">
+		<div class="accordion-item">
+			<h1 class="accordion-header" th:if="${#lists.isEmpty(eveRucherRuche)}">
+				<button class="accordion-button collapsed" type="button" th:text="#{HistRuchersEveOK}">
+				</button>
+			</h1>
+			<h1 class="accordion-header" th:unless="${#lists.isEmpty(eveRucherRuche)}">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					data-bs-target="#collapse0" aria-expanded="true" aria-controls="collapse0"
+					th:text="#{HistRuchersEveKO}">
+				</button>
+			</h1>
+			<div id="collapse0" class="accordion-collapse collapse" data-bs-parent="#accordion"
+				th:unless="${#lists.isEmpty(eveRucherRuche)}">
+				<div class="accordion-body">
+					<table class="table table-sm table-bordered table-striped"
+						th:unless="${#lists.isEmpty(eveRucherRuche)}">
+						<thead>
+							<tr>
+								<th th:text="#{historique}"></th>
+								<th th:text="#{Erreur}"></th>
+								<th th:text="#{date}"></th>
+								<th th:text="#{type}"></th>
+								<th th:text="#{ruche}"></th>
+								<th th:text="#{rucher}"></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="eve : ${eveRucherRuche}">
+								<td th:text="${ruchersErr[eveStat.index]}"></td>
+								<td th:text="${errsRucher[eveStat.index]}"></td>
+								<td><a th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}" th:with="url='/evenement/'+${eve.id}+
+								(${type}?('?type='+${type}+'&itemId='+${itemId}):'')" th:href="@{${url}}"></a></td>
+								<td th:text="#{${eve.type}}"></td>
+								<td th:text="${eve.ruche?.nom}"></td>
+								<td th:text="${eve.rucher?.nom}"></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
-		<h1 class="item" th:if="${#lists.isEmpty(rucherNonVide)}"
-			th:text="#{HistRuchersFinOK}"></h1>
-		<h1 class="item" th:unless="${#lists.isEmpty(rucherNonVide)}"
-			style="background-color: red;" th:text="#{HistRuchersFinKO}"></h1>
-		<div class="container-fluid table-responsive">
-			<table class="table table-sm table-bordered table-striped" th:unless="${#lists.isEmpty(rucherNonVide)}">
-				<thead>
-					<tr>
-						<th th:text="#{rucher}"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="rucher : ${rucherNonVide}">
-						<td><a th:href="@{'/rucher/'+${rucher.id}}"
-						th:text="${rucher.nom}"></a></td>
-					</tr>
-				</tbody>
-			</table>
+		<div class="accordion-item">
+			<h1 class="accordion-header" th:if="${#lists.isEmpty(rucherNonVide)}">
+				<button class="accordion-button collapsed" type="button" th:text="#{HistRuchersFinOK}">
+				</button>
+			</h1>
+			<h1 class="accordion-header" th:unless="${#lists.isEmpty(rucherNonVide)}">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					data-bs-target="#collapse1" aria-expanded="true" aria-controls="collapse1"
+					th:text="#{HistRuchersFinKO}">
+				</button>
+			</h1>
+			<div id="collapse1" class="accordion-collapse collapse" data-bs-parent="#accordion"
+				th:unless="${#lists.isEmpty(rucherNonVide)}">
+				<div class="accordion-body">
+					<table class="table table-sm table-bordered table-striped"
+						th:unless="${#lists.isEmpty(rucherNonVide)}">
+						<thead>
+							<tr>
+								<th th:text="#{rucher}"></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="rucher : ${rucherNonVide}">
+								<td><a th:href="@{'/rucher/'+${rucher.id}}" th:text="${rucher.nom}"></a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
-		<h1 class="item" th:if="${#lists.isEmpty(eveInc)}"
-			th:text="#{PasEvenIncomplets}"></h1>
-		<h1 class="item" th:unless="${#lists.isEmpty(eveInc)}"
-			style="background-color: red;" th:text="#{EvenIncomplets}"></h1>
-		<div class="container-fluid table-responsive">
-			<table class="table table-sm table-bordered table-striped" th:unless="${#lists.isEmpty(eveInc)}">
-				<thead>
-					<tr>
-						<th th:text="#{date}"></th>
-						<th th:text="#{evenement}"></th>
-						<th th:text="#{ruche}"></th>
-						<th th:text="#{essaim}"></th>
-						<th th:text="#{rucher}"></th>
-						<th	th:text="#{hausse}"></th>
-						<th th:text="#{valeur}"></th>
-						<th th:text="#{commentaire}"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="evenement : ${eveInc}">
-						<td><a
-							th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:with="url='/evenement/'+${evenement.id}+
-								(${type}?('?type='+${type}+'&itemId='+${itemId}):'')"
-							th:href="@{${url}}"></a></td>
-						<td th:text="#{${evenement.type}}"></td>
-						<td th:text="${evenement.ruche?.nom}"></td>
-						<td th:text="${evenement.essaim?.nom}"></td>
-						<td th:text="${evenement.rucher?.nom}"></td>
-						<td th:text="${evenement.hausse?.nom}"></td>
-						<th:block th:switch="${evenement.type}">
-							<td class="num"
-								th:case="${T(ooioo.ruches.evenement.TypeEvenement).ESSAIMSUCRE}"
-								th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
-							<td class="num"
-								th:case="${T(ooioo.ruches.evenement.TypeEvenement).RUCHEPESEE}"
-								th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
-							<td class="num" th:case="*" th:text="${evenement.valeur}"></td>
-						</th:block>
-						<td th:text="${evenement.commentaire}"></td>
-					</tr>
-				</tbody>
-			</table>
+		<div class="accordion-item">
+			<h1 class="accordion-header" th:if="${#lists.isEmpty(eveInc)}">
+				<button class="accordion-button collapsed" type="button" th:text="#{PasEvenIncomplets}">
+				</button>
+			</h1>
+			<h1 class="accordion-header" th:unless="${#lists.isEmpty(eveInc)}">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					data-bs-target="#collapse2" aria-expanded="true" aria-controls="collapse2"
+					th:text="#{EvenIncomplets}">
+				</button>
+			</h1>
+			<div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#accordion"
+				th:unless="${#lists.isEmpty(eveInc)}">
+				<div class="accordion-body">
+					<table class="table table-sm table-bordered table-striped" th:unless="${#lists.isEmpty(eveInc)}">
+						<thead>
+							<tr>
+								<th th:text="#{date}"></th>
+								<th th:text="#{evenement}"></th>
+								<th th:text="#{ruche}"></th>
+								<th th:text="#{essaim}"></th>
+								<th th:text="#{rucher}"></th>
+								<th th:text="#{hausse}"></th>
+								<th th:text="#{valeur}"></th>
+								<th th:text="#{commentaire}"></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="evenement : ${eveInc}">
+								<td><a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}" th:with="url='/evenement/'+${evenement.id}+
+								(${type}?('?type='+${type}+'&itemId='+${itemId}):'')" th:href="@{${url}}"></a></td>
+								<td th:text="#{${evenement.type}}"></td>
+								<td th:text="${evenement.ruche?.nom}"></td>
+								<td th:text="${evenement.essaim?.nom}"></td>
+								<td th:text="${evenement.rucher?.nom}"></td>
+								<td th:text="${evenement.hausse?.nom}"></td>
+								<th:block th:switch="${evenement.type}">
+									<td class="num" th:case="${T(ooioo.ruches.evenement.TypeEvenement).ESSAIMSUCRE}"
+										th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
+									<td class="num" th:case="${T(ooioo.ruches.evenement.TypeEvenement).RUCHEPESEE}"
+										th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
+									<td class="num" th:case="*" th:text="${evenement.valeur}"></td>
+								</th:block>
+								<td th:text="${evenement.commentaire}"></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
-		<h1 class="item" th:if="${#lists.isEmpty(eveRucheHausseErr)}"
-			th:text="#{HistHaussesEveOK}"></h1>
-		<h1 class="item" th:unless="${#lists.isEmpty(eveRucheHausseErr)}"
-			style="background-color: red;" th:text="#{HistHaussesEveKO}"></h1>
-		<div class="container-fluid table-responsive">
-			<table class="table table-sm table-bordered table-striped" th:unless="${#lists.isEmpty(eveRucheHausseErr)}">
-				<thead>
-					<tr>
-						<th th:text="#{date}"></th>
-						<th th:text="#{evenement}"></th>
-						<th th:text="#{ruche}"></th>
-						<th th:text="#{hausse}"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="eve : ${eveRucheHausseErr}">
-						<td><a
-							th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}"
-							th:with="url='/evenement/'+${eve.id}+
-								(${type}?('?type='+${type}+'&itemId='+${itemId}):'')"
-							th:href="@{${url}}"></a></td>
-						<td th:text="#{${eve.type}}"></td>
-						<td th:text="${eve.ruche?.nom}"></td>
-						<td th:text="${eve.hausse?.nom}"></td>
-					</tr>
-				</tbody>
-			</table>
+		<div class="accordion-item">
+			<h1 class="accordion-header" th:if="${#lists.isEmpty(eveRucheHausseErr)}">
+				<button class="accordion-button collapsed" type="button" th:text="#{HistHaussesEveOK}">
+				</button>
+			</h1>
+			<h1 class="accordion-header" th:unless="${#lists.isEmpty(eveRucheHausseErr)}">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					data-bs-target="#collapse3" aria-expanded="true" aria-controls="collapse3"
+					th:text="#{HistHaussesEveKO}">
+				</button>
+			</h1>
+			<div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#accordion"
+				th:unless="${#lists.isEmpty(eveRucheHausseErr)}">
+				<div class="accordion-body">
+					<table class="table table-sm table-bordered table-striped"
+						th:unless="${#lists.isEmpty(eveRucheHausseErr)}">
+						<thead>
+							<tr>
+								<th th:text="#{date}"></th>
+								<th th:text="#{evenement}"></th>
+								<th th:text="#{ruche}"></th>
+								<th th:text="#{hausse}"></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="eve : ${eveRucheHausseErr}">
+								<td><a th:text="${#temporals.format(eve.date, 'yyyy/MM/dd HH:mm')}" th:with="url='/evenement/'+${eve.id}+
+								(${type}?('?type='+${type}+'&itemId='+${itemId}):'')" th:href="@{${url}}"></a></td>
+								<td th:text="#{${eve.type}}"></td>
+								<td th:text="${eve.ruche?.nom}"></td>
+								<td th:text="${eve.hausse?.nom}"></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
-		<h1 class="item" th:if="${#lists.isEmpty(rucheNonVide)}"
-			th:text="#{HistRuchesFinOK}"></h1>
-		<h1 class="item" th:unless="${#lists.isEmpty(rucheNonVide)}"
-			style="background-color: red;" th:text="#{HistRuchesFinKO}"></h1>
-		<div class="container-fluid table-responsive">
-			<table class="table table-sm table-bordered table-striped" th:unless="${#lists.isEmpty(rucheNonVide)}">
-				<thead>
-					<tr>
-						<th th:text="#{ruche}"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="ruche : ${rucheNonVide}">
-						<td><a th:href="@{'/ruche/'+${ruche.id}}"
-						th:text="${ruche.nom}"></a></td>
-					</tr>
-				</tbody>
-			</table>
+		<div class="accordion-item">
+			<h1 class="accordion-header" th:if="${#lists.isEmpty(rucheNonVide)}">
+				<button class="accordion-button collapsed" type="button" th:text="#{HistRuchesFinOK}">
+				</button>
+			</h1>
+			<h1 class="accordion-header" th:unless="${#lists.isEmpty(rucheNonVide)}">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+					data-bs-target="#collapse4" aria-expanded="true" aria-controls="collapse4"
+					th:text="#{HistRuchesFinKO}">
+				</button>
+			</h1>
+			<div id="collapse4" class="accordion-collapse collapse" data-bs-parent="#accordion"
+				th:unless="${#lists.isEmpty(rucheNonVide)}">
+				<div class="accordion-body">
+					<table class="table table-sm table-bordered table-striped"
+						th:unless="${#lists.isEmpty(rucheNonVide)}">
+						<thead>
+							<tr>
+								<th th:text="#{ruche}"></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr th:each="ruche : ${rucheNonVide}">
+								<td><a th:href="@{'/ruche/'+${ruche.id}}" th:text="${ruche.nom}"></a></td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
 		</div>
 	</div>
 	<br />
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
