--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -5,7 +5,6 @@
 <script th:replace="include :: jsdatetimepicker"></script>
 <link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include ::  localejsdatetimepicker"></script>
-<script th:replace="include :: moment"></script>
 <script th:inline="javascript">
 	const _csrf_token = /*[[${_csrf.token}]]*/null;
 	const _csrf_param_name = /*[[${_csrf.parameterName}]]*/null;
@@ -34,7 +33,8 @@
 					}
 					$('#date').show();
 					$('#dateOK').show();
-					$('#date').attr('value', moment().format("MM/DD/YYYY HH:mm"));
+					const d = new Date().toISOString().replace('T',' ');
+					$('#date').attr('value', d.slice(0, d.lastIndexOf(':')));
 					$('#date').focus();
 				});
 				$('#dateOK').on('click', function() {
