--- a/src/main/resources/templates/personne/personnesListe.html
+++ b/src/main/resources/templates/personne/personnesListe.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
