--- a/src/main/resources/templates/ruche/ruchesListePlus.html
+++ b/src/main/resources/templates/ruche/ruchesListePlus.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-	<nav th:replace="include :: navbar">Menu</nav>
+	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
 	<br />
 	<br />
