--- a/src/main/resources/templates/ruche/ruchesListeRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListeRucher.html
@@ -32,7 +32,7 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-	<nav th:replace="include :: navbar">Menu</nav>
+	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
 	<br />
 	<br />
