--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
