--- a/src/main/resources/templates/evenement/evenementRemplissageDetail.html
+++ b/src/main/resources/templates/evenement/evenementRemplissageDetail.html
@@ -12,7 +12,7 @@
 </script>
 </head>
 <body>
-	<nav th:replace="include :: navbar">Menu</nav>
+	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
 	<br />
 	<br />
