--- a/src/main/resources/templates/hausse/hausseDetail.html
+++ b/src/main/resources/templates/hausse/hausseDetail.html
@@ -85,7 +85,7 @@ $().ready(function() {
 </script>
 </head>
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
