--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
