--- a/src/main/resources/templates/parametresForm.html
+++ b/src/main/resources/templates/parametresForm.html
@@ -6,7 +6,7 @@
 <script th:replace="include ::  localejsdatetimepicker"></script>
 </head>
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
