--- a/src/main/resources/templates/recolte/recolteForm.html
+++ b/src/main/resources/templates/recolte/recolteForm.html
@@ -31,7 +31,7 @@
 </script>
 </head>
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
