--- a/src/main/resources/templates/recolte/recolteMielForm.html
+++ b/src/main/resources/templates/recolte/recolteMielForm.html
@@ -57,7 +57,7 @@ input[type="number"] {
 </style>
 </head>
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
