--- a/src/main/resources/templates/recolte/recoltesStat.html
+++ b/src/main/resources/templates/recolte/recoltesStat.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
