--- a/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
+++ b/src/main/resources/templates/ruche/rucheRetraitHausseForm.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
