--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-	<nav th:replace="include :: navbar">Menu</nav>
+	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
 	<br />
 	<br />
