--- a/src/main/resources/templates/ruchetype/rucheTypeDetail.html
+++ b/src/main/resources/templates/ruchetype/rucheTypeDetail.html
@@ -45,7 +45,7 @@
 </script>
 </head>
 <body>
-	<nav th:replace="include :: navbar"></nav>
+	<nav th:replace="navbar::navbar"></nav>
 	<br />
 	<br />
 	<br />
