--- a/src/main/resources/templates/ruchetype/rucheTypesListe.html
+++ b/src/main/resources/templates/ruchetype/rucheTypesListe.html
@@ -22,7 +22,7 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-	<nav th:replace="include :: navbar">Menu</nav>
+	<nav th:replace="navbar::navbar">Menu</nav>
 	<br />
 	<br />
 	<br />
