$().ready -> document.addEventListener("DOMContentLoaded", ...

--- a/src/main/resources/templates/essaim/essaimAssociation.html
+++ b/src/main/resources/templates/essaim/essaimAssociation.html
@@ -8,7 +8,7 @@
 		const essaimsupprimerecoltetxt = /*[[#{essaimsupprimerecolte}]]*/ null;
 		const supprimeressaimevenementstxt = /*[[#{supprimeressaimevenements}]]*/ null;
 		const supprimeressaimtxt = /*[[#{supprimeressaim}]]*/ null;
-		$(document).ready(function () {
+		document.addEventListener("DOMContentLoaded", () => {
 			$('.confirmation').on('click', function () {
 				if (recolteHausses) {
 					alert(essaimsupprimerecoltetxt);
