--- a/src/main/resources/templates/essaim/essaimGraphe.html
+++ b/src/main/resources/templates/essaim/essaimGraphe.html
@@ -14,7 +14,7 @@
 	const Actif = /*[[#{actif}]]*/ null;
 	const Inactif = /*[[#{Inactif}]]*/ null;
 	const urlessaim = /*[[@{/essaim/}]]*/ null;
-	$(document).ready(essaimGraphe);
+	document.addEventListener("DOMContentLoaded", essaimGraphe);
 </script>
 <style>
 .node circle {
