--- a/src/main/resources/templates/evenement/evenementNotifListe.html
+++ b/src/main/resources/templates/evenement/evenementNotifListe.html
@@ -8,7 +8,7 @@
 	const Notifications = /*[[#{Notifications}]]*/ null;
 	const btp = /*[[#{buttontextprint}]]*/null;
 	const btc = /*[[#{buttontextcol}]]*/null;
-	$(document).ready(function() {
+	document.addEventListener("DOMContentLoaded", () => {
 		$('.bi-question-lg').popover({
 	        html: true
 	    });
