--- a/src/main/resources/templates/recolte/recolteDetail.html
+++ b/src/main/resources/templates/recolte/recolteDetail.html
@@ -15,8 +15,7 @@
 	const urlRecHDepot = /*[[@{/recolte/haussesDepot/}]]*/null;
 	const recId = /*[[${recolte.id}]]*/null;
 	const totalPourLaRuche = /*[[#{totalPourLaRuche}]]*/null;
-	$(document).ready(
-			function() {
+	document.addEventListener("DOMContentLoaded", () => {
 				$('#date').hide();
 				$('#dateOK').hide();
 				$("#enlevehausses").click(function() {
