--- a/src/main/resources/templates/recolte/recoltesStat.html
+++ b/src/main/resources/templates/recolte/recoltesStat.html
@@ -11,7 +11,7 @@
 		const poidsmiel = /*[[${poids}]]*/ null;
 		const nomsessaims = /*[[${noms}]]*/ null;
 		const poidsTotal = /*[[${poidsTotal}]]*/ null;
-		$(document).ready(function () {graphe();});
+		document.addEventListener("DOMContentLoaded", () => {graphe();});
 	</script>
 </head>
 
