--- a/src/main/resources/templates/ruche/ruchesListeRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListeRucher.html
@@ -7,7 +7,7 @@ const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 const Ruches = /*[[#{Ruches}]]*/ null;
 const rucher = /*[[#{rucher}]]*/ null;
 const nomrucher = /*[[${rucher.nom}]]*/ null;
-$(document).ready(function() {
+document.addEventListener("DOMContentLoaded", () => {
 	const idTbl = '#ruches';
     new DataTable(idTbl, {
         dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
