--- a/src/main/resources/templates/essaim/essaimForm.html
+++ b/src/main/resources/templates/essaim/essaimForm.html
@@ -7,7 +7,7 @@
 	<script th:inline="javascript">
 		const essaimNoms = /*[[${essaimNoms}]]*/null;
 		const nomexiste = /*[[#{nomexiste}]]*/null;
-		$().ready(function () {
+		document.addEventListener("DOMContentLoaded", () => {
 			$("#reineDateNaissance, #dateAcquisition").datetimepicker(
 				{timepicker: false, format: 'Y-m-d'});
 			$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
