--- a/src/main/resources/templates/essaim/essaimTraitementForm.html
+++ b/src/main/resources/templates/essaim/essaimTraitementForm.html
@@ -6,7 +6,7 @@
 <link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script>
-	$().ready(function() {
+	document.addEventListener("DOMContentLoaded", () => {
 		$("#commentaire").focus();
 		$('#finTraitement').on('click', function() {
 			if ($(this).is(':checked')) {
