--- a/src/main/resources/templates/evenement/evenementCadreRucheListe.html
+++ b/src/main/resources/templates/evenement/evenementCadreRucheListe.html
@@ -9,8 +9,7 @@
 	const Evenements = /*[[#{evenementcadreruche}]]*/ null;
 	const buttontextprint = /*[[#{buttontextprint}]]*/null;
 	const buttontextcol = /*[[#{buttontextcol}]]*/null;
-	$(document).ready(function() {
-		evenementListe(true);
+	document.addEventListener("DOMContentLoaded", () => evenementListe(true));
 	});
 </script>
 </head>
