--- a/src/main/resources/templates/evenement/evenementCommHausseDetail.html
+++ b/src/main/resources/templates/evenement/evenementCommHausseDetail.html
@@ -4,7 +4,7 @@
 	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:inline="javascript">
 	const suppeve = /*[[#{supprimerevenement}]]*/null;
-	$(document).ready(function() {
+	document.addEventListener("DOMContentLoaded", () => {
 		$('.confirmation').on('click', function() {
 			return confirm(suppeve);
 		});
