--- a/src/main/resources/templates/evenement/evenementListe.html
+++ b/src/main/resources/templates/evenement/evenementListe.html
@@ -9,9 +9,7 @@
 	const Evenements = /*[[#{evenements}]]*/ null;
 	const buttontextprint = /*[[#{buttontextprint}]]*/ null;
 	const buttontextcol = /*[[#{buttontextcol}]]*/ null;
-	$(document).ready(function() {
-		evenementListe(true);
-	});
+	document.addEventListener("DOMContentLoaded", () => evenementListe(true));
 </script>
 </head>
 <body>
