--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -10,8 +10,7 @@
 	const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
 	const buttTxtCol = /*[[#{buttontextcol}]]*/null;
 	const Evenements = /*[[#{evenementssucre}]]*/null;
-	$(document).ready(
-			function() {
+	document.addEventListener("DOMContentLoaded", () => {
 				const idTbl = '#evenementssucre';
 				new DataTable(idTbl, {
 					order : [ [ 0, 'desc' ] ],
