--- a/src/main/resources/templates/hausse/haussesListe.html
+++ b/src/main/resources/templates/hausse/haussesListe.html
@@ -8,7 +8,7 @@
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 		const urlCommLot = /*[[@{/evenement/hausse/commentaireLot/}]]*/ null;
 		const selectHaTrait = /*[[#{selecthaussestraiter}]]*/ null;
-		$(document).ready(function () {
+		document.addEventListener("DOMContentLoaded", () => {
 			const idTbl = '#hausses';
 			const table = new DataTable(idTbl, {
 				select: {style: 'multi+shift'},
