--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -91,7 +91,7 @@
 <link th:fragment="cssdatetimepicker" rel="stylesheet" type="text/css"
 	media="all" th:href="@{/js/jquery.datetimepicker.min-2.5.21.css}" />
 <script th:fragment="localejsdatetimepicker">
-	$().ready(function() {
+	document.addEventListener("DOMContentLoaded", () => {
 		$("#date").datetimepicker();
 		$.datetimepicker.setLocale(window.navigator.language.substring(0, 2));
 	});
