--- a/src/main/resources/templates/recolte/recolteForm.html
+++ b/src/main/resources/templates/recolte/recolteForm.html
@@ -6,7 +6,7 @@
 <link th:replace="include :: cssdatetimepicker" />
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script th:inline="javascript">
-	$().ready(function() {
+	document.addEventListener("DOMContentLoaded", () => {
 		$("#typeMiel").focus();
 		$("#recolteForm").validate({
 			errorClass : 'erreur-form',
