--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -9,7 +9,7 @@
 	const dateFirst = /*[[${dateFirst}]]*/null;
 	const timeFirst = /*[[${timeFirst}]]*/null;
 	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
-	$().ready(function() {
+	document.addEventListener("DOMContentLoaded", () => {
 		$.validator.addMethod("greaterThanEqual", function(value, element, param) {
 			return Date.parse(value) > Date.parse(param);
 		}, doitEtreSupA + ' {0}');
