--- a/src/main/resources/templates/rucher/rucherCommentaireForm.html
+++ b/src/main/resources/templates/rucher/rucherCommentaireForm.html
@@ -5,7 +5,7 @@
 <link th:replace="include :: cssdatetimepicker"/>
 <script th:replace="include ::  localejsdatetimepicker"></script>
 <script th:inline="javascript">
-	$().ready(function() {
+	document.addEventListener("DOMContentLoaded", () => {
 		$("#commentaire").focus();
 		$("#evenementForm").validate({
 			errorClass: 'erreur-form',
