--- a/src/main/resources/templates/rucher/rucherForm.html
+++ b/src/main/resources/templates/rucher/rucherForm.html
@@ -5,7 +5,7 @@
 <script th:inline="javascript">
 	const nomexiste = /*[[#{nomexiste}]]*/ null;
 	const rucherNoms = /*[[${rucherNoms}]]*/ null;
-	$().ready(function() {
+	document.addEventListener("DOMContentLoaded", () => {
 		$("#nom").focus();
 		jQuery.validator.addMethod("nomExiste", function(value) {   
     		return $.inArray(value, rucherNoms) == -1;
